@@ -13,7 +13,7 @@ web.fromHint=Von
 web.toHint=Nach
 web.moreButton=mehr
 web.gpxExportButton=GPX Export
-web.routeInfo=%1$s%2$s werden %3$s brauchen
+web.routeInfo=%1$s werden %2$s brauchen
 web.locationsNotFound=Routing war nicht möglich. Ort(e) nicht gefunden in diesem Gebiet.
 web.bike=Fahrrad
 web.racingbike=Rennrad
