@@ -13,7 +13,7 @@ web.fromHint=From
 web.toHint=To
 web.moreButton=more
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s will take %3$s
+web.routeInfo=%1$s will take %2$s
 web.locationsNotFound=Routing not possible. Location(s) not found in the area.
 web.bike=Bike
 web.racingbike=Racingbike
