@@ -13,7 +13,7 @@ web.fromHint=De
 web.toHint=À
 web.moreButton=plus
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s durera %3$s 
+web.routeInfo=%1$s durera %2$s 
 web.locationsNotFound=Calcul d'itinéraire impossible. Position(s) non trouvée(s) dans la zone.
 web.bike=Vélo
 web.racingbike=Racingbike
