@@ -13,7 +13,7 @@ web.fromHint=出発地点
 web.toHint=目的地点
 web.moreButton=詳細
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s 所要時間 %3$s
+web.routeInfo=%1$s 所要時間 %2$s
 web.locationsNotFound=経路を検索できませんでした．指定の地点が存在しません．
 web.bike=自転車
 web.racingbike=Racingbike
