@@ -13,7 +13,7 @@ web.fromHint=De
 web.toHint=Para
 web.moreButton=mais
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s irá levar %3$s
+web.routeInfo=%1$s irá levar %2$s
 web.locationsNotFound=Roteamento impossível. Localização(ões) não encontrada(s) na área.
 web.bike=Bicicleta
 web.racingbike=Racingbike
