@@ -13,7 +13,7 @@ web.fromHint=От
 web.toHint=До
 web.moreButton=еще
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s займет %3$s
+web.routeInfo=%1$s займет %2$s
 web.locationsNotFound=Построение маршрута невозвозможно. Местоположение не определено
 web.bike=Велосипед
 web.racingbike=Racingbike
