@@ -13,7 +13,7 @@ web.fromHint=Od
 web.toHint=Do
 web.moreButton=več
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s bo trajalo %3$s
+web.routeInfo=%1$s bo trajalo %2$s
 web.locationsNotFound=Usmerjanje ni mogoče. Lokacije ne pokaže na tem območju.
 web.bike=Kolo
 web.racingbike=Racingbike
