@@ -13,7 +13,7 @@ web.fromHint=-den
 web.toHint=yönüne
 web.moreButton=daha fazlası
 web.gpxExportButton=GPX export
-web.routeInfo=%1$s%2$s alacak %3$s
+web.routeInfo=%1$s alacak %2$s
 web.locationsNotFound=Rota planlanamadı. Bölgede yer bulunamadı.
 web.bike=Bisiklet
 web.racingbike=Racingbike
