@@ -1,4 +1,5 @@
 0.3.0
+    the instructions of the web response does not contain times (string) but instead millis (long)
     PrepareContractionHierarchies.setPeriodicUpdates is now in percentage not in absolute counts
     gpx export via API or HTTP (route?type=gpx)
     breaking: The web response, Path.time and GHResponse.time change to milliseconds and 'long' (instead of seconds and double)
